--- a/content/blogs/Blog 1, preprogramme assignment.rmd
+++ b/content/blogs/Blog 1, preprogramme assignment.rmd
@@ -3,9 +3,9 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:42:51-05:00"
-description: Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna
-  sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa
-  sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem
+description: Nullam et orci eu lorem consdequat tincidunt vivamus et sagittis magna
+  sed nunc rhoncus condifdmentum vcvcsem. In efficitur ligula tate urna. Maecenas massa
+  sed magna lacinia magna pelldfentesque lorem ipsum dolor. Nullam et orci eu lorem
   consequat tincidunt. Vivamus et sagittis tempus.
 draft: false
 image: pic07.jpg
