--- a/content/blogs/my_life.rmd
+++ b/content/blogs/my_life.rmd
@@ -31,8 +31,8 @@ and at 18 I moved to the Netherlands to complete my university studies.
 
 I come from a big family. We are 6 siblings in total. We are all very
 close to each other, which made living with them a lot of fun! There was
-never a dull moment in my house growing up! Their names are: - Carlos -
-Felipe - Fernando - Luis - Carlota
+never a dull moment in my house growing up! Their names are Carlos,
+Felipe, Fernando, Luis, and Carlota
 
 Now I am beggining to write a new chapter in my life, by moving to
 London and starting the MAM Program with a group of great people! I am
