--- a/content/blogs/challenge_bikes.Rmd
+++ b/content/blogs/challenge_bikes.Rmd
@@ -1,10 +1,7 @@
 ---
 title: The effects of lockdowns on mobility
 date: '2017-10-31T22:42:51-05:00'
-description: Nullam et orci eu lorem consdequat tincidunt vivamus et sagittis magna
-  sed nunc rhoncus condifdmentum vcvcsem. In efficitur ligula tate urna. Maecenas
-  massa sed magna lacinia magna pelldfentesque lorem ipsum dolor. Nullam et orci eu
-  lorem consequat tincidunt. Vivamus et sagittis tempus.
+description: How did the national lockdown affect cycling mobility in the city of London? Come find out!
 draft: no
 image: bikes.jpg
 keywords: ''
