--- a/content/blogs/gdp.Rmd
+++ b/content/blogs/gdp.Rmd
@@ -3,7 +3,7 @@ categories:
 - ""
 - ""
 date: "2017-10-31T22:26:09-05:00"
-description: Lorem Etiam Nullam
+description: The ins and outs of GDP reporting.
 draft: false
 image: growth.jpg
 keywords: ""
